google map + router

--- a/src/app/navigation-component/navigation.component.html
+++ b/src/app/navigation-component/navigation.component.html
@@ -5,12 +5,12 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">Link 1</a>
+      <a mat-list-item [routerLink]="'/carte'"> Activities </a>
       <a mat-list-item href="#">Link 2</a>
       <a mat-list-item href="#">Link 3</a>
     </mat-nav-list>
   </mat-sidenav>
-  <mat-sidenav-content>
+  <mat-sidenav-content fxLayout="column">
     <mat-toolbar color="primary">
       <button
         type="button"
@@ -20,8 +20,10 @@
         *ngIf="isHandset$ | async">
         <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
       </button>
-      <span>route-poisson-position-ui</span>
+      <span>La Route du Poisson</span>
     </mat-toolbar>
-    <mat-slider min="1" max="100" step="1" value="1"></mat-slider>
+    <div fxFlex>
+      <router-outlet></router-outlet>
+    </div>
   </mat-sidenav-content>
 </mat-sidenav-container>
