--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,6 +1,6 @@
 <div style="padding: 20px; border-radius: 10px" class="mat-elevation-z2" fxLayoutAlign="center center">
-  <div fxFlex="">{{profile.name}}</div>
-  <div fxFlex="">Batterie restante : {{profile.battery}}%</div>
+  <div fxFlex="">{{team.name}}</div>
+  <div fxFlex="">Batterie restante : {{team.battery}}%</div>
   <button mat-button>
     <mat-icon>edit</mat-icon>
   </button>
