--- a/src/app/components/team-management/team-management.component.html
+++ b/src/app/components/team-management/team-management.component.html
@@ -1,3 +1,3 @@
 <div style="margin: 10px" fxLayout="column" fxLayoutGap="10px">
-    <app-team *ngFor="let p of profiles" [profile]="p"></app-team>
+    <app-team *ngFor="let p of teams" [team]="p"></app-team>
 </div>
