Les équipes ont une lettre attitrée pour l'affichage sur la carte

--- a/src/app/components/google-map/google-map.component.html
+++ b/src/app/components/google-map/google-map.component.html
@@ -7,7 +7,7 @@
     <div *ngFor="let t of teams">
       <map-marker *ngFor="let p of t.positions"
                   [position]="p.coordinates"
-                  [options]="markerOptions">
+                  [options]="t.markerOptions">
       </map-marker>
     </div>
 
