--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,9 +1,9 @@
-<div style="padding: 20px; border-radius: 10px" class="mat-elevation-z2" fxLayoutAlign="center center">
+<div class="mat-elevation-z2 team" fxLayoutAlign="center center">
   <div fxFlex="">{{team.name}}</div>
   <div fxFlex="">#{{team.letter}}</div>
   <div fxFlex="">Batterie restante : {{team.battery}}%</div>
   <div fxFlex="">Nombre de positions : {{team.positions.length}}</div>
-  <button mat-button>
+  <button mat-button [routerLink]="['/gestion-equipe', team.name]">
     <mat-icon>edit</mat-icon>
   </button>
 </div>
