Amiéloration affichage liste équipes

--- a/src/app/components/google-map/google-map.component.html
+++ b/src/app/components/google-map/google-map.component.html
@@ -13,7 +13,7 @@
 
   </google-map>
   <div class="settings-container">
-    <button mat-fab (click)="openBottomSheet()">
+    <button mat-fab (click)="openBottomSheet()" color="primary">
       <mat-icon>settings</mat-icon>
     </button>
   </div>
