--- a/src/app/components/team-management/team-management.component.html
+++ b/src/app/components/team-management/team-management.component.html
@@ -1,3 +1,6 @@
-<div style="margin: 10px" fxLayout="column" fxLayoutGap="10px">
+<mat-accordion
+  style="margin: 10px"
+  fxLayout="column"
+  fxLayoutGap="10px">
     <app-team *ngFor="let p of teams" [team]="p"></app-team>
-</div>
+</mat-accordion>
