--- a/src/app/components/team/team.component.html
+++ b/src/app/components/team/team.component.html
@@ -1,19 +1,28 @@
-<div class="mat-elevation-z2 team" fxLayoutAlign="center center" fxLayoutGap="10px">
-  <div>#{{team.letter}}</div>
-  <div fxFlex="20">{{team.name}}</div>
-  <div fxFlex fxLayoutAlign="center center">
-    <mat-icon>{{team.battery > 15 ? 'battery_full' : 'battery_alert'}}</mat-icon>
-    {{team.battery}}%
+<mat-expansion-panel>
+  <mat-expansion-panel-header >
+    <mat-panel-title fxLayoutAlign="center center" fxLayoutGap="10px">
+      <div>#{{team.letter}}</div>
+      <div fxFlex="20">{{team.name}}</div>
+      <div fxFlex fxLayoutAlign="center center">
+        <mat-icon>{{team.battery > 15 ? 'battery_full' : 'battery_alert'}}</mat-icon>
+        {{team.battery}}%
+      </div>
+      <div fxFlex fxLayoutAlign="center center" fxLayoutGap="3px">
+        <mat-icon>{{team.positions.length > 0 ? 'gps_fixed' : 'gps_not_fixed'}}</mat-icon>
+        <div>{{team.positions.length}}</div>
+      </div>
+      <a matTooltip="Propriétés application GPS" matTooltipPosition="left" mat-icon-button
+         [href]="getUrl()">
+        <mat-icon>settings_remote</mat-icon>
+      </a>
+      <button mat-icon-button [routerLink]="['/gestion-equipe', team.name]">
+        <mat-icon>read_more</mat-icon>
+      </button>
+    </mat-panel-title>
+  </mat-expansion-panel-header>
+  <div>
+    <a matTooltip="Appel" matTooltipPosition="left" mat-icon-button href="tel:0634267320">
+      <mat-icon>call</mat-icon>
+    </a>
   </div>
-  <div fxFlex fxLayoutAlign="center center" fxLayoutGap="3px">
-    <mat-icon>{{team.positions.length > 0 ? 'gps_fixed' : 'gps_not_fixed'}}</mat-icon>
-    <div>{{team.positions.length}}</div>
-  </div>
-  <a matTooltip="Propriétés application GPS" matTooltipPosition="left" mat-icon-button
-     [href]="getUrl()">
-    <mat-icon>settings_remote</mat-icon>
-  </a>
-  <button mat-icon-button [routerLink]="['/gestion-equipe', team.name]">
-    <mat-icon>edit</mat-icon>
-  </button>
-</div>
+</mat-expansion-panel>
